# survey-lottery-automation

./: .gitignore  LICENSE  PRIVACY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_responses.csv
examples/: run_lottery.py
notebooks/: Survey_Lottery_Automation.ipynb
src/survey_lottery/: __init__.py  audit.py  csv_io.py  domain.py  draw.py  preview.py  safety.py
tests/: test_audit.py  test_csv_io.py  test_draw.py  test_example_workflow.py  test_portfolio_safety.py  test_preview.py
