[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-lottery-automation"
version = "1.0.0"
description = "Privacy-safe, reproducible survey lottery automation."
requires-python = ">=3.11"
license = "MIT"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
